--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
+    "openai": "^5.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.10",
